<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="all"
        android:id="@+id/watchlist_group">

        <item
            android:id="@+id/watchlist"
            android:title="@string/menu_watchlist"
            android:orderInCategory="0"/>
    </group>

    <group
        android:checkableBehavior="all">

        <item
            android:id="@+id/visitorlocation"
            android:title="@string/menu_visitorlocation"
            android:orderInCategory="1"/>
    </group>

    <group
        android:checkableBehavior="all">
        <item
            android:id="@+id/alertcenter"
            android:title="@string/menu_alertcenter"
            android:orderInCategory="2"/>
    </group>

    <group
        android:checkableBehavior="all">
        <item
            android:id="@+id/setting"
            android:title="@string/action_settings"
            android:orderInCategory="3"/>

    </group>

    <group
        android:checkableBehavior="all">
        <item
            android:id="@+id/logout"
            android:title="@string/menu_logout"
            android:orderInCategory="4"/>

    </group>
</menu>