<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#dd424242"
            android:id="@+id/loading"/>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <include layout="@layout/appbarlayout_scroll"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_stopalert_for"
                    android:textSize="18sp"
                    android:paddingRight="10dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/tv_stop"
                    android:textColor="#424242"/>
                <Spinner
                    android:layout_width="40dp"
                    android:layout_height="26dp"
                    android:background="@drawable/rectangle_edittext"
                    android:layout_centerVertical="true"
                    android:id="@+id/sp_stopalert"
                    android:layout_toRightOf="@+id/tv_stop"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_minutes"
                    android:paddingLeft="10dp"
                    android:textSize="18sp"
                    android:id="@+id/tv_minutes"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/sp_stopalert"
                    android:textColor="#424242"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/btn_savestopalert"
                    android:text="@string/btn_text_save"
                    android:onClick="onClick"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="#424242"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_export_visitor"
                    android:textSize="18sp"
                    android:paddingRight="10dp"
                    android:layout_centerVertical="true"
                    android:textColor="#424242"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/btn_exportvisitor"
                    android:text="@string/btn_text_export"
                    android:onClick="onClick"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="#424242"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_set_ringtone"
                    android:textSize="18sp"
                    android:paddingRight="10dp"
                    android:layout_centerVertical="true"
                    android:textColor="#424242"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/btn_setringtone"
                    android:text="@string/btn_text_change"
                    android:onClick="onClick"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header_view"
        app:menu="@menu/drawer_menu"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <!--<include
        layout="@layout/drawerlayout"
        android:id="@+id/left_drawer"/>-->

</android.support.v4.widget.DrawerLayout>